--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1188,11 +1188,25 @@
     "product.set_title(\"Product Holiday Package yang diambil berdasarkan jabatan pekerjaan user\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coba"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coba pull request"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.9.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1206,12 +1220,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9da1b1b2a29d3b236fe49fb5812d61ad0fc9ad1d043df80838b3360eeace8084"
+    "hash": "14958d3aee5f1cad06795f787e54b96185c25fb40dfec723a5be941f3a531b8c"
    }
   }
  },
