--- a/model_resto.ipynb
+++ b/model_resto.ipynb
@@ -9,18 +9,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.cm as cm\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import RobustScaler, OrdinalEncoder, Normalizer, StandardScaler\n",
-    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "from sklearn.preprocessing import OrdinalEncoder, Normalizer, StandardScaler\n",
     "\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score, silhouette_samples\n",
+    "from sklearn.metrics import silhouette_score\n",
     "from sklearn.cluster import SpectralClustering\n",
-    "from sklearn.cluster import AgglomerativeClustering as AC\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.cluster import AgglomerativeClustering as AC"
    ]
   },
   {
