update menuju final 2

--- a/model_classification.ipynb
+++ b/model_classification.ipynb
@@ -13,7 +13,36 @@
    "metadata": {},
    "source": [
     "---\n",
+    "# I. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada notebook ini, kita akan membuat sebuah model classification yang dapat memprediksi kelas user berdasarkan informasi yang didapatkan pada dataset holiday package (https://www.kaggle.com/datasets/susant4learning/holiday-package-purchase-prediction). Dataset ini berisikan 4.888 baris data dan 20 kolom data. Dataset ini berisikan informasi mengenai user atau customer perusahaan travel agency. Perusahaan memiliki sebuah dataset customer yang berisikan historis customer dalam menggunakan paket liburan yang perusahaan tawarkan. Kolom `ProdTaken` merupakan kolom label utama pada dataset ini, yang menjelaskan apakah customer tersebut mengambil paket liburan yang ditawarkan atau tidak. Pada project ini, kita asumsikan seluruh customer mengambil paket liburan yang ditawarkan kepadanya, sehingga fokus kolom label pada dataset ini kita ubah menjadi kolom `ProductPitched` yang didalamnya terdapat kelas paket holiday dari Basic, Standard, Deluxe, Super Deluxe, dan King. Kolom ini akan kita jadikan sebagai label yang selanjutnya model klasifikasi diharapkan dapat melakukan prediksi label ini dengan baik untuk menentukan kelas customer tersebut."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Objective dari notebook ini adalah kita dapat membangun sebuah model klasifikasi yang dapat memprediksi label kelas customer / user berdasarkan karakteristik masing-masing customer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "# II. Import Libraries\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Library yang kita gunakan adalah pandas, numpy, matplotlib, seaborn, scikit-learn, feature engine, dan pickle."
    ]
   },
   {
@@ -1846,9 +1875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "# Features Selection - Features Importance (Random Forest)"
+    "## Features Selection - Features Importance (Random Forest)"
    ]
   },
   {
@@ -4916,6 +4943,24 @@
     "# saving pipeline preprocessing\n",
     "with open('pipeline_pre.pkl', 'wb') as file_2:\n",
     "  pickle.dump(pipeline_pre, file_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# XI. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kesimpulan dari notebook ini adalah sebagai berikut:\n",
+    "1. Model random forest merupakan model base terbaik diantara model lainnya dengan hasil akurasi skor yang paling tinggi pada bagian cross validation yaitu sebesar 88%.\n",
+    "2. Model random forest setelah hyperparameter tuning dipilih untuk dijadikan model deployment karena hasil akurasi skor pada data test-set tidak overfitting apabila dibandingkan dengan akurasi skor data train-set. Hasil akurasi skor pada test-set adalah sebesar 86%.\n",
+    "3. Model klasifikasi dan pipeline untuk preprocessing data dapat digunakan untuk model deployment pada apps heroku.com"
    ]
   }
  ],
