--- a/model_hotel.ipynb
+++ b/model_hotel.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis Hotel Star"
+    "## Analisis Hotel Star (Opsi 1)"
    ]
   },
   {
@@ -587,22 +587,21 @@
    "source": [
     "Berdasarkan analisis kolom `hotel_star` diatas, kita dapat melihat proporsi hotel bintang 1 sampai 5 pada dataset hotel ini. Hotel bintang 3 merupakan hotel paling banyak dengan jumlah 25 hotel. Analisis juga memperlihatkan semakin tinggi bintang hotelnya maka rata-rata harga hotel semakin mahal. Hal ini wajar karena semakin tinggi bintang hotel, maka semakin mahal harga hotel.  \n",
     "  \n",
-    "Rata-rata harga hotel bintang 1 berada pada harga Rp. 318.600 , sedangkan harga hotel bintang 2 berada pada harga Rp. 390.455. Karena hotel bintang 1 dan 2 ini memiliki rata-rata harga hotel yang mirip, maka kita dapat gabungkan menjadi satu cluster. Rata-rata harga hotel bintang 3 berada pada harga Rp. 540.880, harga hotel bintang 3 ini sudah cukup jauh dengan harga hotel bintang 1 dan 2, sehingga hotel bintang 3 dapat menjadi cluster tersendiri. Rata-rata harga hotel bintang 4 berada pada harga Rp. 959.250, harga ini sudah dapat dikatakan cukup mahal dikalangan user traveler, maka untuk hotel bintang 4 dan 5 akan dapat kita gabungkan menjadi 1 cluster yang sama.  \n",
-    "  \n",
-    "Kesimpulan dari analisis Hotel star ini adalah kita dapat membagi hotel menjadi 3 cluster yaitu sebagai berikut:\n",
-    "1. Hotel bintang 1 dan 2 -> Basic\n",
-    "2. Hotel bintang 3 -> Deluxe\n",
-    "3. Hotel bintang 4 dan 5 -> King  \n",
-    "  \n",
-    "\n",
-    "Hasil clustering diatas berdasarkan analisa pada kolom `hotel_star` dan kolom `price`. Apabila pada hasil clustering menggunakan model menghasilkan model clustering yang buruk, maka kita dapat menggunakan clustering berdasarkan hasil analisa diatas."
+    "Rata-rata harga hotel bintang 1 berada pada harga Rp. 318.600 , sedangkan harga hotel bintang 2 berada pada harga Rp. 390.455. Karena hotel bintang 1 dan 2 ini memiliki rata-rata harga hotel yang mirip, maka kita dapat gabungkan menjadi satu cluster. Rata-rata harga hotel bintang 3 berada pada harga Rp. 540.880, harga hotel bintang 3 ini sudah cukup jauh dengan harga hotel bintang 1 dan 2, sehingga hotel bintang 3 dapat menjadi cluster tersendiri. Rata-rata harga hotel bintang 4 berada pada harga Rp. 959.250, harga ini sudah dapat dikatakan cukup mahal dikalangan user traveler, maka untuk hotel bintang 4 dan 5 akan dapat kita gabungkan menjadi 1 cluster yang sama. Opsi penggabungan cluster hotel ini akan dijadikan sebagai opsi pertama, selanjutnya mari kita lihat opsi lain yang dapat kita lakukan untuk melakukan cluster hotel ini."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis Range Harga Hotel"
+    "## Analisis Range Harga Hotel (Opsi 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada analisis range harga hotel ini, kita ingin melihat apakah dataset hotel ini dapat kita lakukan clustering berdasarkan range harganya."
    ]
   },
   {
