--- a/model_resto.ipynb
+++ b/model_resto.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Clustering - Resto Dataset\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada bagian ini, kita akan melakukan clustering pada resto-resto yang ada di Labuan Bajo. Clustering yang diharapkan adalah 3 cluster yang sesuai dengan kelas user yaitu Basic, Deluxe, dan King, maka pada bagian ini kita tetapkan n_cluster = 3. Model clustering yang akan kita gunakan adalah model K-Means, Agglomerative Clustering, dan Spectral Clustering. Apabila pada hasil clustering yang didapatkan menghasilkan cluster yang buruk atau tidak sesuai dengan kelas user, maka kita akan menerapkan manual clustering berdasarkan kolom tertentu yang terdapat pada dataset resto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1214,6 +1236,20 @@
    "outputs": [],
    "source": [
     "hasil_scl.to_csv('resto_final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kesimpulan Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hasil clustering data resto ini adalah model spectral clustering dapat melakukan clustering dengan cukup baik. Proprorsi yang didapatkan sudah cukup baik, dengan tidak adanya satu cluster yang terlalu sedikit jumlah datanya. Clustering ini akan diasosiasikan kepada setiap kelas user, sehingga para user akan mendapatkan rekomendasi resto berdasarkan kelas user tersebut."
    ]
   }
  ],
